add sort task with dao